terraform/security_groups.tf
resource "aws_security_group" "phrh_security_group" {
   vpc_id      = "${aws_default_vpc.default.id}"
 ingress {
     from_port       = 22
     to_port         = 22 
     protocol        = "tcp"
     cidr_blocks     = ["0.0.0.0/0"]
   }
  ingress {
     from_port       = 8080
     to_port         = 8080
     protocol        = "tcp"
     cidr_blocks     = ["0.0.0.0/0"]
   }
 egress {
     from_port       = 0
     to_port         = 0
     protocol        = "-1"
     cidr_blocks     = ["0.0.0.0/0"]
   }
 }
